# C-Primer

./: README.md
OpencvTest/: CMakeLists.txt
OpencvTest/lib64/: libopencv_calib3d.so.3.4.8  libopencv_features2d.so.3.4.8  libopencv_photo.so.3.4.8  libopencv_superres.so.3.4.8  libopencv_videoio.so.3.4.8  libopencv_videostab.so.3.4.8
OpencvTest/src/: Solution.h  main.cpp
OpencvTestUsingLocalEnv/: CMakeLists.txt
OpencvTestUsingLocalEnv/inc/opencv2/: cvconfig.h
OpencvTestUsingLocalEnv/lib64/: libopencv_flann.so.3.4.8  libopencv_highgui.so.3.4.8  libopencv_imgcodecs.so.3.4.8  libopencv_ml.so.3.4.8  libopencv_objdetect.so.3.4.8  libopencv_shape.so.3.4.8  libopencv_stitching.so.3.4.8  libopencv_video.so.3.4.8  libopencv_videoio.so.3.4.8
OpencvTestUsingLocalEnv/lib64/pkgconfig/: opencv.pc
OpencvTestUsingLocalEnv/src/: Solution.cpp  common.h
